--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
     "test": "test"
   },
   "scripts": {
+    "dev": "node --env-file=.env server.js",
+    "start": "node server.js",
+    "seed": "node scripts/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +19,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongodb": "^6.20.0"
+    "mongodb": "^6.20.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
