--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.5",
-    "tailwindcss": "^4.1.15"
+    "tailwindcss": "^4.1.15",
+    "framer-motion": "^11.2.6",
+    "lucide-react": "^0.453.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
