--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,23 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
+    "bcrypt": "^6.0.0",
+    "concurrently": "^9.2.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "framer-motion": "^11.2.6",
+    "lucide-react": "^0.453.0",
+    "mongodb": "^7.0.0",
+    "multer": "^2.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.5",
-    "tailwindcss": "^4.1.15",
-    "framer-motion": "^11.2.6",
-    "lucide-react": "^0.453.0"
+    "react-router-dom": "^7.9.6",
+    "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
