--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "concurrently \"node server.js\" \"vite\"",
+    "start": "node server.js",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
