--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^6.0.0",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "framer-motion": "^11.2.6",
     "lucide-react": "^0.453.0",
