--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb+srv://marksalamon101_db_user:UbVjDb3Fhiq6oG1l@avtodb.ryx32ol.mongodb.net/?appName=avtoDB
-PORT=8000
-PUBLIC_URL=http://localhost:8000
-FRONTEND_URL=http://localhost:5173
+PORT=
+PUBLIC_URL=https://drivex-backend-iiyg.onrender.com
+FRONTEND_URL=https://zaklucna.vercel.app/
