--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb+srv://marksalamon101_db_user:UbVjDb3Fhiq6oG1l@avtodb.ryx32ol.mongodb.net/?appName=avtoDB
 PORT=
-PUBLIC_URL=https://drivex-backend-iiyg.onrender.com
+BACKEND_URL=https://drivex-backend-iiyg.onrender.com
 FRONTEND_URL=https://zaklucna.vercel.app/
