--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "framer-motion": "^11.2.6",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongodb": "^7.0.0",
     "multer": "^2.0.2",
