--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "form-data": "^4.0.5",
+    "FormData": "^0.10.1",
     "framer-motion": "^11.2.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
